# mcp-logseq

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  FEATURE_QUERY_DSL.md  LOGSEQ_API_ARCHITECTURE.md  README.md  ROADMAP.md  VECTOR_SEARCH.md  pyproject.toml  smithery.yaml
docs/: SERVING.md  TASK_METHODOLOGY.md
docs/superpowers/plans/: 2026-06-14-http-transport-secure-serving.md  2026-06-14-namespace-access-control.md  2026-06-15-index-time-namespace-scoping.md  2026-06-16-tls-serving-and-bind-guardrail.md  2026-07-10-pluggable-embedding-providers.md  2026-07-11-embedder-api-key-env.md  2026-07-19-a5-logging.md
docs/superpowers/specs/: 2026-06-14-namespace-access-control-design.md  2026-07-10-pluggable-embedding-providers-design.md  2026-07-11-embedder-api-key-env-design.md  2026-07-19-a5-logging-design.md
specs/query-dsl/: architecture.md  plan.md  spec.md
src/mcp_logseq/: __init__.py  access.py  config.py  logseq.py  namespace.py  parser.py  server.py  settings.py  tools.py
src/mcp_logseq/tools/: __init__.py  base.py  blocks.py  namespace.py  pages.py  search.py
src/mcp_logseq/transport/: auth.py  http.py
src/mcp_logseq/vector/: chunker.py  db.py  embedder.py  index.py  sync.py
tests/: conftest.py
tests/integration/: test_http_serving.py  test_mcp_server.py
tests/unit/: test_access.py  test_access_policy_coverage.py  test_cli.py  test_db_properties.py  test_exclude_tags.py  test_http_transport.py  test_logging.py  test_logseq_api.py  test_namespace_access.py  test_parser.py  test_property_persistence.py  test_settings.py  test_tool_handlers.py
(+7 files in other folders)
