[project]
name = "mcp-logseq"
version = "0.1.0"
description = "MCP server to work with LogSeq via the local HTTP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.1.0",
 "python-dotenv>=1.0.1",
 "requests>=2.32.3",
]

[[project.authors]]
name = "Salih"
email = "salih@example.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-logseq = "mcp_logseq:main"
